// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#eee",
        "borderRadius": 5,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      undefined,
    ]
  }
/>
`;

exports[`<Text /> renders correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 18,
      },
      undefined,
    ]
  }
>
  Hello world!
</Text>
`;

exports[`<TextInput /> renders correctly 1`] = `
<TextInput
  allowFontScaling={true}
  placeholderTextColor="#ddd"
  rejectResponderTermination={true}
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 18,
        "margin": 10,
      },
      undefined,
    ]
  }
  underlineColorAndroid="transparent"
/>
`;
